--- a/javascript/Vue实现无限加载MenuList组件/index.html
+++ b/javascript/Vue实现无限加载MenuList组件/index.html
@@ -9,10 +9,10 @@
 <body>
   <script type="text/x-template" id="menu">
     <div>
-      <div v-for="(item, index) in myList" :key="index">
+      <div v-for="(item, index) in listData" :key="index">
         <span @click="handleMenuOnclick(item, index)" style="cursor: pointer;">{{item.content}}</span>
         <div v-if="item.children.length > 0" v-show="item.showChild" style="margin-left: 10px;">
-          <menu-list :list-data.sync="item.children"></menu-list>
+          <menu-list :list-data="item.children"></menu-list>
         </div>
       </div>
     </div>
@@ -20,16 +20,6 @@
   <script>
     Vue.component('menu-list', {
       template: '#menu',
-      computed: {
-        myList: {
-          get () {
-            return this.listData
-          },
-          set () {
-            this.$emit('update:myList', this.listData)
-          }
-        }
-      },
       props: {
         listData: {
           type: Array,
@@ -39,14 +29,14 @@
       methods: {
         handleMenuOnclick (item, index) {
           const data = {...item, showChild: item.showChild ? !item.showChild : true}
-          this.$set(this.myList, index, data)
+          this.$set(this.listData, index, data)
         }
       }
     })
   </script>
 
   <div id="app">
-    <menu-list :list-data.sync="listData"></menu-list>
+    <menu-list :list-data="listData"></menu-list>
   </div>
 
   <script>
