Update and rename Vue 实现无限加载 nav-menu 组件 to Vue 实现无限加载 navMenu 组件.html

--- a/javascript/Vue实践相关/Vue 实现无限加载 navMenu 组件.html
+++ b/javascript/Vue实践相关/Vue 实现无限加载 navMenu 组件.html
@@ -61,6 +61,15 @@
           selectedItem: null
         }
       },
+      watch: {
+        menuData: {
+          immediate: false,
+          deep: false,
+          handler (val, oldVal) {
+            this.selectedItem = null
+          }
+        }
+      },
       methods: {
         handleMenuClick (item, index) {
           this.selectedItem = item
